implement db and identity

--- a/JwtAuthAspNet7WebAPI/appsettings.json
+++ b/JwtAuthAspNet7WebAPI/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAMMOI;Initial Catalog=JwtAuthAspNet7WebApiDb;User ID=sa;Password=1;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWT": {
+    "ValidIssuer": "https://localhost:7028",
+    "ValidAudience": "https://localhost:3000",
+    "Secret": "lamdeptraivodichvutru"
   },
   "AllowedHosts": "*"
 }
