--- a/JwtAuthAspNet7WebAPI/appsettings.json
+++ b/JwtAuthAspNet7WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAMMOI;Initial Catalog=JwtAuthAspNet7WebApiDb;User ID=sa;Password=1;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=LAMMOI\\SQLEXPRESS;Initial Catalog=JwtAuthAspNet7WebApiDb;User ID=sa;Password=1;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
